@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-31T16:20:11Z",
-  "count_outdated" : 794,
-  "uniques_outdated" : 460,
+  "timestamp" : "2023-09-01T01:11:35Z",
+  "count_outdated" : 795,
+  "uniques_outdated" : 461,
   "count" : 825,
   "uniques" : 484,
   "clones" : [
-    {
-      "timestamp": "2023-08-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-19T00:00:00Z",
       "count": 5,
