@@ -1,12 +1,7 @@
 {
-  "count": 31,
+  "count": 30,
   "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2023-08-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-19T00:00:00Z",
       "count": 5,
